chore : modify sequence directory

--- a/code/sequence/pyproject.toml
+++ b/code/sequence/pyproject.toml
@@ -19,6 +19,8 @@ wandb = "^0.15.2"
 tensorboard = "^2.13.0"
 numpy = "1.23.2"
 black = "^23.3.0"
+easydict = "^1.10"
+hyperopt = "^0.2.7"
 
 [tool.poetry.group.dev.dependencies]
 pandas = "^2.0.1"
